# math-modeling-skill-v1.0

./: .gitignore  LICENSE  README.md  TUTORIAL.md  pyproject.toml  requirements.txt  run_all.py  skill.md
examples/: config.py  layout_optimizer.py  main.py  nsga2.py  tsp_solver.py  utils.py  vrptw_ga.py
methodology/: AI协作心法.md  写作心法.md  分步工作流.md  算法选型指南.md
src/math_modeling/: __init__.py  formula_renderer.py  paper_generator.py  table_builder.py
